--- a/PanArctic_DSL_figures.Rmd
+++ b/PanArctic_DSL_figures.Rmd
@@ -123,6 +123,17 @@ SA_integrated <- SA_integrated %>%
                               if_else(LME == "CAO" & lon < 0, "BF", LME)),
                       levels = c("BF", "NAR", "BB", "SV"))) %>%
   droplevels()
+# Location acoustic data
+MVBS_laea <- MVBS %>%
+  group_by(date, lat, lon) %>% 
+  summarise() %>%
+  ungroup() %>%
+  st_as_sf(coords = c("lon", "lat"),
+           crs = st_crs("EPSG:4326"), remove = F) %>% # Transform into sf
+  st_transform(crs = st_crs(arctic_laea)) %>% # Change projection
+  mutate(xc = st_coordinates(.)[,1],
+         yc = st_coordinates(.)[,2]) %>%
+  st_drop_geometry()
 
 MVBS_latlon <- MVBS %>% # Location of acoustic data
   mutate(lat = round(lat, 1),
@@ -145,11 +156,28 @@ SA_grid_laea <- SA_grid_laea %>%
 
 # Trawl data
 load("data/nets/trawl_mwt_2015_2017.RData")
+load("data/nets/trawl_length.RData")
 trawl_latlon <- trawl_station %>% # Location of trawls
   group_by(date) %>%
   summarise(lat = mean(lat),
             lon = mean(lon),
             year = year(date))
+trawl <- trawl %>%
+  st_as_sf(coords = c("lon", "lat"), crs = st_crs(arctic_latlon), 
+           remove = F) %>%
+  # Append LME 
+  st_join(., LME_sf_latlon, join = st_within) %>% 
+  st_drop_geometry()  %>%
+  mutate(LME = case_when(LME == "Beaufort Sea LME" ~ "BF",
+                         LME == "Central Arctic LME" ~ "CAO",
+                         LME == "Baffin Bay LME" ~ "BB",
+                         LME == "Barents Sea LME" ~ "SV",
+                         LME == "Northern Canadian Archipelago LME" ~
+                           "NAR"),
+         LME = factor(if_else(LME == "CAO" & lon >= 0, "SV",
+                              if_else(LME == "CAO" & lon < 0, "BF", LME)),
+                      levels = c("BF", "NAR", "BB", "SV"))) %>%
+  droplevels()
 
 # Remote sensing data
 load(paste0("data/remote_sensing/physics_grids_", cell_res, "km.RData"))
@@ -186,6 +214,7 @@ LM_area_res <- LM_area_res %>%
                                 LME == "SV" ~ "North. Barents Sea"),
                       levels = c("Beaufort Sea", "Baffin Bay",
                                  "North. Barents Sea", "Nares Strait")))
+load("data/statistics/LM_BB_results.RData")
 load("data/statistics/GAMSA_results.RData")
 predSA_I <- predSA_I %>%
   mutate(LME = factor(case_when(LME == "BF" ~ "Beaufort Sea",
@@ -230,9 +259,9 @@ bathy_laea <- SpatialPointsDataFrame(SpatialPoints(cbind(bathy_df$lon,
               between(depth, -2000, -1000) ~ "1000-2000",
               between(depth, -3000, -2000) ~ "2000-3000",
               between(depth, -4000, -3000) ~ "3000-4000",
-              between(depth, -Inf, -4000) ~ "4000-5500"),
+              between(depth, -Inf, -4000) ~ "> 4000"),
     levels = c(">0", "0-100", "100-200", "200-500", "500-1000",
-               "1000-2000", "2000-3000", "3000-4000", "4000-5500")))
+               "1000-2000", "2000-3000", "3000-4000", "> 4000")))
 
 # Coastline shapefile
 coast_10m_laea <- readOGR("data/bathy/ne_10m_land.shp", verbose = F) %>% 
@@ -323,11 +352,11 @@ trawl_laea <- SpatialPointsDataFrame(
   dplyr::select(year, LME, lat, lon, xc, yc)
 
 # Location of acoustic data
-MVBS_laea <- SpatialPoints(cbind(MVBS_latlon$lon, MVBS_latlon$lat), 
-                           proj4string = CRS("EPSG:4326")) %>%
-  spTransform(., CRSobj = crs(arctic_laea)) %>% # Change projection to EPSG:6931
-  as.data.frame() %>%
-  rename(xc = coords.x1, yc = coords.x2) # Rename variables
+# MVBS_laea <- SpatialPoints(cbind(MVBS_latlon$lon, MVBS_latlon$lat), 
+#                            proj4string = CRS("EPSG:4326")) %>%
+#   spTransform(., CRSobj = crs(arctic_laea)) %>% # Change projection to EPSG:6931
+#   as.data.frame() %>%
+#   rename(xc = coords.x1, yc = coords.x2) # Rename variables
 ```
 
 # Summary statistics
@@ -400,54 +429,152 @@ SA_grid_laea %>%
 ## Figure 1. Base map with IHO areas reprojcted
 
 ```{r map-areas, fig.height=4, fig.width=6}
-# Bathymetric map of the Arctic with location of acoustic and trawl
-p_map_laea <- bathy_laea %>%
+lat70 <- data.frame(lon = seq(-180, 180, length.out = 1000)) %>%
+  mutate(lat = rep(70, 1000)) %>%
+  st_as_sf(coords = c("lon", "lat"),
+           crs = st_crs("EPSG:4326"), remove = F) %>% # Transform into sf
+  st_transform(crs = st_crs(arctic_laea)) %>% # Change projection
+  mutate(xc = st_coordinates(.)[,1],
+         yc = st_coordinates(.)[,2]) %>%
+  st_drop_geometry()
+lat80 <- data.frame(lon = seq(-180, 180, length.out = 1000)) %>%
+  mutate(lat = rep(80, 1000)) %>%
+  st_as_sf(coords = c("lon", "lat"),
+           crs = st_crs("EPSG:4326"), remove = F) %>% # Transform into sf
+  st_transform(crs = st_crs(arctic_laea)) %>% # Change projection
+  mutate(xc = st_coordinates(.)[,1],
+         yc = st_coordinates(.)[,2]) %>%
+  st_drop_geometry()
+lon0 <- data.frame(lon = rep(0, 1000)) %>%
+  mutate(lat =  seq(0, 90, length.out = 1000)) %>%
+  st_as_sf(coords = c("lon", "lat"),
+           crs = st_crs("EPSG:4326"), remove = F) %>% # Transform into sf
+  st_transform(crs = st_crs(arctic_laea)) %>% # Change projection
+  mutate(xc = st_coordinates(.)[,1],
+         yc = st_coordinates(.)[,2]) %>%
+  st_drop_geometry()
+lon90 <- data.frame(lon = rep(90, 1000)) %>%
+  mutate(lat =  seq(0, 90, length.out = 1000)) %>%
+  st_as_sf(coords = c("lon", "lat"),
+           crs = st_crs("EPSG:4326"), remove = F) %>% # Transform into sf
+  st_transform(crs = st_crs(arctic_laea)) %>% # Change projection
+  mutate(xc = st_coordinates(.)[,1],
+         yc = st_coordinates(.)[,2]) %>%
+  st_drop_geometry()
+lon180 <- data.frame(lon = rep(180, 1000)) %>%
+  mutate(lat =  seq(0, 90, length.out = 1000)) %>%
+  st_as_sf(coords = c("lon", "lat"),
+           crs = st_crs("EPSG:4326"), remove = F) %>% # Transform into sf
+  st_transform(crs = st_crs(arctic_laea)) %>% # Change projection
+  mutate(xc = st_coordinates(.)[,1],
+         yc = st_coordinates(.)[,2]) %>%
+  st_drop_geometry()
+lon90e <- data.frame(lon = rep(-90, 1000)) %>%
+  mutate(lat =  seq(0, 90, length.out = 1000)) %>%
+  st_as_sf(coords = c("lon", "lat"),
+           crs = st_crs("EPSG:4326"), remove = F) %>% # Transform into sf
+  st_transform(crs = st_crs(arctic_laea)) %>% # Change projection
+  mutate(xc = st_coordinates(.)[,1],
+         yc = st_coordinates(.)[,2]) %>%
+  st_drop_geometry()
+
+
+map_laea <- bathy_laea %>%
   ggplot(aes(x = xc, y = yc)) +
   # Plot bathy
-  geom_raster(aes(fill = depth_d)) +
-  # scale_fill_cmocean("Depth (m)", name = "deep",
-  #                    discrete = T, na.value = NA, alpha = 0.3) +
+  geom_raster(aes(fill = depth_d), alpha = 0.8) +
   scale_fill_grey("Depth (m)", start = 0.9, end = 0.3) +
-  guides(fill = "none") + 
+  # guides(fill = "none") + 
   new_scale_fill() +
-  # Areas of interest
-  # geom_polygon(data = IHO_WAO, aes(x = xc, y = yc, group = group),
-  #              fill = NA, col = "red", lwd = 0.3, lty = 1) +
-  # geom_shape(data = IHO_BF, aes(x = xc, y = yc, group = group),
-  #            fill = NA, col = "purple", lwd = 0.3, lty = 1) +
-  # geom_shape(data = IHO_CAA, aes(x = xc, y = yc, group = group),
-  #            fill = NA, col = "orange", lwd = 0.3, lty = 1) +
-  # geom_shape(data = IHO_BB, aes(x = xc, y = yc, group = group),
-  #            fill = NA, col = "blue", lwd = 0.3, lty = 1) +
-  # geom_shape(data = IHO_DS, aes(x = xc, y = yc, group = group),
-  #            fill = NA, col = "green", lwd = 0.3, lty = 1) +
-  # geom_shape(data = IHO_EAO, aes(x = xc, y = yc, group = group),
-  #            fill = NA, col = "yellow", lwd = 0.3, lty = 1) +
+  # LME
   geom_polygon(data = LME, aes(x = xc, y = yc, group = group),
-               col = "orange", fill = NA, alpha = 0.2, 
+               col = "black", fill = NA, alpha = 0.2, 
                lwd = 0.5, lty = 1) +
   # Plot coastlines
   geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group),
                fill = "grey30") +
+  # Latitudes 
+  geom_path(data = lat70, aes(x = xc, y = yc), 
+            col = "white", lty = 2, size = 0.4) +
+  geom_path(data = lat80, aes(x = xc, y = yc), 
+            col = "white", lty = 2, size = 0.4) +
   # Arctic circle
   geom_path(data = arctic_circle_laea, aes(x = xc, y = yc), 
-            col = "white", lty = 2, size = 0.5) +
-  coord_fixed(xlim = c(-2450, 650), ylim = c(-1500, 1800), expand = F) +
+            col = "white", lty = 2, size = 0.4) +
+  # coord_fixed(xlim = c(-2450, 1200), ylim = c(-1500, 2000), expand = F) +
+  # coord_fixed(xlim = c(-2450, 650), ylim = c(-1500, 1800), expand = F) +
+  coord_fixed(xlim = c(-2500, 1700), ylim = c(-1700, 2200), expand = F) +
   guides(fill = "none") +
   # Acoustics
-  geom_point(data = SA_raw_laea, aes(x = xc, y = yc), 
-             shape = 4, col = "darkblue", alpha = 0.5) +
+  geom_point(data = MVBS_laea, aes(x = xc, y = yc), 
+             shape = 20, col = "#009E73", alpha = 0.5) +
   # Trawls
   geom_point(data = trawl_laea, aes(x = xc, y = yc),
-             shape = 23, fill = "orange") +
+             shape = 23, fill = "#E69F00", size = 2) +
+  # Plot North Pole
+  geom_point(aes(x = 0, y = 0), shape = 4, stroke = 0.5) +
+
   theme(legend.position = "right", 
         panel.border = element_rect(fill = NA),
         axis.text = element_blank(),
         axis.ticks = element_blank(), 
         axis.title = element_blank())
-ggsave("plots/base_map_laeamap_stations.png",
-       p_map_laea, height = 4, width = 6, dpi = 600, units = "in")
-p_map_laea
+ggsave("plots/base_map_laea_stations.png",
+       map_laea, height = 4, width = 6, dpi = 600, units = "in")
+col_pal <- c("#999999", "#E69F00", "#56B4E9", "#009E73",
+          "#F0E442", "#0072B2", "#D55E00", "#CC79A7")
+
+map_laea_lon <- bathy_laea %>%
+  ggplot(aes(x = xc, y = yc)) +
+  # Plot bathy
+  geom_raster(aes(fill = depth_d), alpha = 0.8) +
+  scale_fill_grey("Depth (m)", start = 0.9, end = 0.3) +
+  # guides(fill = "none") +
+  new_scale_fill() +
+  # LME
+  geom_polygon(data = LME, aes(x = xc, y = yc, group = group),
+               col = "black", fill = NA, alpha = 0.2, 
+               lwd = 0.5, lty = 1) +
+  # Plot coastlines
+  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group),
+               fill = "grey30") +
+  # Latitudes 
+  geom_path(data = lat70, aes(x = xc, y = yc), 
+            col = "white", lty = 2, size = 0.4, alpha = 0.75) +
+  geom_path(data = lat80, aes(x = xc, y = yc), 
+            col = "white", lty = 2, size = 0.4, alpha = 0.75) +
+  # Longitudes 
+  geom_path(data = lon0, aes(x = xc, y = yc), 
+            col = "red", lty = 1, size = 0.4, alpha = 0.75) +
+  geom_path(data = lon90, aes(x = xc, y = yc), 
+            col = "red", lty = 1, size = 0.4, alpha = 0.75) +
+  geom_path(data = lon180, aes(x = xc, y = yc), 
+            col = "red", lty = 1, size = 0.4, alpha = 0.75) +
+  geom_path(data = lon90e, aes(x = xc, y = yc), 
+            col = "red", lty = 1, size = 0.4, alpha = 0.75) +
+  # Arctic circle
+  geom_path(data = arctic_circle_laea, aes(x = xc, y = yc), 
+            col = "white", lty = 2, size = 0.4, alpha = 0.75) +
+  # coord_fixed(xlim = c(-2450, 1200), ylim = c(-1500, 2000), expand = F) +
+  # coord_fixed(xlim = c(-2450, 650), ylim = c(-1500, 1800), expand = F) +
+  coord_fixed(xlim = c(-2500, 1700), ylim = c(-1700, 2200), expand = F) +
+  guides(fill = "none") +
+  # Acoustics
+  geom_point(data = MVBS_laea, aes(x = xc, y = yc), 
+             shape = 20, col = "#009E73", alpha = 0.5) +
+  # Trawls
+  geom_point(data = trawl_laea, aes(x = xc, y = yc),
+             shape = 18, col = "#E69F00", size = 2) +
+  # Plot North Pole
+  geom_point(aes(x = 0, y = 0), shape = 4, stroke = 0.5) +
+
+  theme(legend.position = "right", 
+        panel.border = element_rect(fill = NA),
+        axis.text = element_blank(),
+        axis.ticks = element_blank(), 
+        axis.title = element_blank())
+ggsave("plots/base_map_laea_stations_lon.png",
+       map_laea_lon, height = 4, width = 6, dpi = 600, units = "in")
 ```
 
 ## Figure 2. Boxplot mesopelagic NASC
@@ -1057,9 +1184,76 @@ ggsave("plots/Figure_map_velo.png", map_velo,
 # map_velo
 ```
 
-## Table S3. Acoustic settings
+## Figure SX. LM BB & size distribution
 
-```{r tableS3-acoustic-settings, echo=F, warning=F, message=F, fig.align='center'}
+```{r LM_histograms}
+# Histogram
+trawl_BB_meta <- trawl %>%
+  group_by(date, year, station, deployment, LME, bottom_depth_trawl, 
+           max_sampling_depth, tow_type) %>%
+  summarise() %>%
+  ungroup() %>%
+  filter(LME == "BB") %>%
+  dplyr::select(date) 
+BB_length <- trawl_Amundsen_length_weight %>%
+  filter(date %in% trawl_BB_meta$date & fish_species == "boreogadus_saida") %>%
+  mutate(lat_d = cut(lat, seq(0, 90, 2)),
+         SL_cm = SL_mm_lab / 10) %>%
+  ggplot() +
+  geom_histogram(aes(x = SL_cm, fill = lat_d),
+                 col = "white", bins = 50, na.rm = T) + # 0.5 cm bins 
+  scale_fill_viridis_d("Latitude (°N)", option = "mako", 
+                       begin = 0.1, end = 0.8, direction = -1) +
+  scale_x_continuous("Standard length (cm)", limits = c(5, 15),
+                     breaks = seq(0, 20, 1)) +
+  scale_y_continuous("Count", breaks = seq(0, 20, 2), expand = c(0, 0),
+                     limits = c(0, 13)) +
+  theme(panel.border = element_blank(),
+        legend.key.width = unit(0.15, "in"),
+        legend.key.height = unit(0.15, "in"),
+        axis.line = element_line())
+
+# Linear regression
+SA_BB_mycto <- SA_BB %>%
+  filter(mycto_TF == F) %>%
+  mutate(mycto_excluded = T)
+
+LM_BB <- SA_BB %>%
+  mutate(mycto_excluded = F) %>%
+  bind_rows(., SA_BB_mycto) %>%
+  ggplot(aes(x = lat, y = SA_int, col = mycto_excluded)) +
+  geom_point() +
+  geom_smooth(method = "lm", se = F) +
+  scale_x_continuous("Latitude (°N)", breaks = seq(0, 90, 2)) + 
+  scale_y_continuous(
+    expression("S"[A]*" (dB re 1 m"^2*" nmi"^-2*")"),
+    position = "left",
+    breaks = seq(5, 25, 5),
+    sec.axis = 
+      sec_axis(trans = ~10^(./10), 
+               name = expression("s"[A]*" ( m"^2*" nmi"^-2*")"),
+               breaks = round(10^(c(5, 10, 15, 20, 25)/10), 1))) +
+  scale_colour_viridis_d("Myctophid removed", 
+                         option = "mako", begin = 0.3, end = 0.7) +
+  # scale_fill_manual("LME", values = col_pal) +
+  # coord_cartesian(ylim = c(-4.5, 44.5)) +
+  guides(fill = "none", shape = "none") +
+  theme(legend.position = "top", 
+        panel.border = element_blank(),
+        axis.line = element_line())
+
+# Combine plots
+BB_LM_hist <- plot_grid(LM_BB, BB_length, ncol = 1, align = "hv", axis = "tblr",
+                        labels = "auto", label_size = 9)
+# Save and display plot
+ggsave("plots/Baffin_Bay_LM_length.png", BB_LM_hist, 
+       height = 5, width = 6.5, dpi = 600, units = "in")
+BB_LM_hist
+```
+
+## Table S1. Acoustic settings
+
+```{r tableS1-acoustic-settings, echo=F, warning=F, message=F, fig.align='center'}
 summary_MVBS <- MVBS %>%
   group_by(date,process_ID, filename, area, year) %>%
   summarise() %>% # Remove depth component
@@ -1095,6 +1289,17 @@ data.frame(year=c(rep(2015,3), rep(2016,3), rep(2017,3)),
   pack_rows("2016", 4, 6) %>%
   pack_rows("2017", 7, 9)
 ```
+
+## Table S2. Trawl summary
+
+```{r tableS1-acoustic-settings, echo=F, warning=F, message=F, fig.align='center'}
+trawl_summary <- trawl %>%
+  group_by(date, year, station, deployment, LME, bottom_depth_trawl, 
+           max_sampling_depth, tow_type) %>%
+  summarise() 
+```
+
+
 
 
 # OLD PLOTS
