--- a/PanArctic_DSL_figures.Rmd
+++ b/PanArctic_DSL_figures.Rmd
@@ -58,7 +58,7 @@ arctic_latlon <- raster(extent(-155, 35, 66, 85), crs = "EPSG:4326")
 
 # Laea projection for bathy and all other files
 cell_res <- 150 # Cell resolution in km
-arctic_laea <- raster(extent(-2700, 2700, -2700, 2700), crs = "EPSG:6931") 
+arctic_laea <- raster(extent(-3500, 3500, -3500, 3500), crs = "EPSG:6931") 
 projection(arctic_laea) <- gsub("units=m", "units=km", # Convert from m to km
                                 projection(arctic_laea)) 
 res(arctic_laea) <- c(cell_res, cell_res) # Define cell resolution
@@ -234,7 +234,7 @@ I re-project data from the WGS84 projection to the EASE-Grid 2.0 North projectio
 
 ```{r data-laea-projection, cache=TRUE}
 # Bahty projection: EPSG:6931 with a 5 x 5 km cell resolution
-proj_bathy_laea <- raster(extent(-2700, 2700, -2700, 2700), 
+proj_bathy_laea <- raster(extent(-3500, 3500, -3500, 3500), 
                           crs = "EPSG:6931", res = c(5, 5)) # Seaice projection
 projection(proj_bathy_laea) <- gsub("units=m", "units=km", # Convert from m to km
                                     projection(arctic_laea)) 
@@ -1299,6 +1299,163 @@ trawl_summary <- trawl %>%
   summarise() 
 ```
 
+# ICES/PICES presentation plots
+
+## Map with currents
+
+```{r ICES-map-currents, fig.height=4, fig.width=6}
+lat70 <- data.frame(lon = seq(-180, 180, length.out = 1000)) %>%
+  mutate(lat = rep(70, 1000)) %>%
+  st_as_sf(coords = c("lon", "lat"),
+           crs = st_crs("EPSG:4326"), remove = F) %>% # Transform into sf
+  st_transform(crs = st_crs(arctic_laea)) %>% # Change projection
+  mutate(xc = st_coordinates(.)[,1],
+         yc = st_coordinates(.)[,2]) %>%
+  st_drop_geometry()
+lat80 <- data.frame(lon = seq(-180, 180, length.out = 1000)) %>%
+  mutate(lat = rep(80, 1000)) %>%
+  st_as_sf(coords = c("lon", "lat"),
+           crs = st_crs("EPSG:4326"), remove = F) %>% # Transform into sf
+  st_transform(crs = st_crs(arctic_laea)) %>% # Change projection
+  mutate(xc = st_coordinates(.)[,1],
+         yc = st_coordinates(.)[,2]) %>%
+  st_drop_geometry()
+lon0 <- data.frame(lon = rep(0, 1000)) %>%
+  mutate(lat =  seq(0, 90, length.out = 1000)) %>%
+  st_as_sf(coords = c("lon", "lat"),
+           crs = st_crs("EPSG:4326"), remove = F) %>% # Transform into sf
+  st_transform(crs = st_crs(arctic_laea)) %>% # Change projection
+  mutate(xc = st_coordinates(.)[,1],
+         yc = st_coordinates(.)[,2]) %>%
+  st_drop_geometry()
+lon90 <- data.frame(lon = rep(90, 1000)) %>%
+  mutate(lat =  seq(0, 90, length.out = 1000)) %>%
+  st_as_sf(coords = c("lon", "lat"),
+           crs = st_crs("EPSG:4326"), remove = F) %>% # Transform into sf
+  st_transform(crs = st_crs(arctic_laea)) %>% # Change projection
+  mutate(xc = st_coordinates(.)[,1],
+         yc = st_coordinates(.)[,2]) %>%
+  st_drop_geometry()
+lon180 <- data.frame(lon = rep(180, 1000)) %>%
+  mutate(lat =  seq(0, 90, length.out = 1000)) %>%
+  st_as_sf(coords = c("lon", "lat"),
+           crs = st_crs("EPSG:4326"), remove = F) %>% # Transform into sf
+  st_transform(crs = st_crs(arctic_laea)) %>% # Change projection
+  mutate(xc = st_coordinates(.)[,1],
+         yc = st_coordinates(.)[,2]) %>%
+  st_drop_geometry()
+lon90e <- data.frame(lon = rep(-90, 1000)) %>%
+  mutate(lat =  seq(0, 90, length.out = 1000)) %>%
+  st_as_sf(coords = c("lon", "lat"),
+           crs = st_crs("EPSG:4326"), remove = F) %>% # Transform into sf
+  st_transform(crs = st_crs(arctic_laea)) %>% # Change projection
+  mutate(xc = st_coordinates(.)[,1],
+         yc = st_coordinates(.)[,2]) %>%
+  st_drop_geometry()
+
+map_laea <- bathy_laea %>%
+  ggplot(aes(x = xc, y = yc)) +
+  # Plot bathy
+  geom_raster(aes(fill = depth), alpha = 0.8) +
+  # scale_fill_grey("Depth (m)", start = 0.9, end = 0.3) +
+  scale_fill_cmocean("Depth (m)", name = "deep", limits = c(-4500, 0),
+                     direction = -1, breaks = seq(-6000, 0, 500),
+                     na.value = "#281A2CCC") +
+  # guides(fill = "none") + 
+  new_scale_fill() +
+  # LME
+  # geom_polygon(data = LME, aes(x = xc, y = yc, group = group),
+  #              col = "black", fill = NA, alpha = 0.2, 
+  #              lwd = 0.5, lty = 1) +
+  # Plot coastlines
+  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group),
+               fill = "grey30") +
+  # Latitudes 
+  # geom_path(data = lat70, aes(x = xc, y = yc), 
+  #           col = "white", lty = 2, size = 0.4) +
+  # geom_path(data = lat80, aes(x = xc, y = yc), 
+  #           col = "white", lty = 2, size = 0.4) +
+  # Arctic circle
+  geom_path(data = arctic_circle_laea, aes(x = xc, y = yc), 
+            col = "white", lty = 2, size = 0.6) +
+  # coord_fixed(xlim = c(-2450, 1200), ylim = c(-1500, 2000), expand = F) +
+  # coord_fixed(xlim = c(-2450, 650), ylim = c(-1500, 1800), expand = F) +
+  coord_fixed(xlim = c(-2800, 2800), ylim = c(-2800, 2800), expand = F) +
+  guides(fill = "none") +
+  # # Acoustics
+  # geom_point(data = MVBS_laea, aes(x = xc, y = yc), 
+  #            shape = 20, col = "#009E73", alpha = 0.5) +
+  # # Trawls
+  # geom_point(data = trawl_laea, aes(x = xc, y = yc),
+  #            shape = 23, fill = "#E69F00", size = 2) +
+  # Plot North Pole
+  geom_point(aes(x = 0, y = 0), shape = 4, stroke = 0.5) +
+  theme(legend.position = "right", 
+        legend.key.height = unit(0.75, "in"),
+        legend.key.width = unit(0.3, "in"),
+        legend.text = element_text(size = 16),
+        legend.title = element_text(size = 18),
+        panel.border = element_rect(fill = NA),
+        axis.text = element_blank(),
+        axis.ticks = element_blank(), 
+        axis.title = element_blank())
+ggsave("plots/ICES_base_map_laea.png",
+       map_laea, height = 6.5, width = 10, dpi = 600, units = "in")
+# col_pal <- c("#999999", "#E69F00", "#56B4E9", "#009E73",
+#           "#F0E442", "#0072B2", "#D55E00", "#CC79A7")
+# 
+# map_laea_lon <- bathy_laea %>%
+#   ggplot(aes(x = xc, y = yc)) +
+#   # Plot bathy
+#   geom_raster(aes(fill = depth_d), alpha = 0.8) +
+#   scale_fill_grey("Depth (m)", start = 0.9, end = 0.3) +
+#   # guides(fill = "none") +
+#   new_scale_fill() +
+#   # LME
+#   geom_polygon(data = LME, aes(x = xc, y = yc, group = group),
+#                col = "black", fill = NA, alpha = 0.2, 
+#                lwd = 0.5, lty = 1) +
+#   # Plot coastlines
+#   geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group),
+#                fill = "grey30") +
+#   # Latitudes 
+#   geom_path(data = lat70, aes(x = xc, y = yc), 
+#             col = "white", lty = 2, size = 0.4, alpha = 0.75) +
+#   geom_path(data = lat80, aes(x = xc, y = yc), 
+#             col = "white", lty = 2, size = 0.4, alpha = 0.75) +
+#   # Longitudes 
+#   geom_path(data = lon0, aes(x = xc, y = yc), 
+#             col = "red", lty = 1, size = 0.4, alpha = 0.75) +
+#   geom_path(data = lon90, aes(x = xc, y = yc), 
+#             col = "red", lty = 1, size = 0.4, alpha = 0.75) +
+#   geom_path(data = lon180, aes(x = xc, y = yc), 
+#             col = "red", lty = 1, size = 0.4, alpha = 0.75) +
+#   geom_path(data = lon90e, aes(x = xc, y = yc), 
+#             col = "red", lty = 1, size = 0.4, alpha = 0.75) +
+#   # Arctic circle
+#   geom_path(data = arctic_circle_laea, aes(x = xc, y = yc), 
+#             col = "white", lty = 2, size = 0.4, alpha = 0.75) +
+#   # coord_fixed(xlim = c(-2450, 1200), ylim = c(-1500, 2000), expand = F) +
+#   # coord_fixed(xlim = c(-2450, 650), ylim = c(-1500, 1800), expand = F) +
+#   coord_fixed(xlim = c(-2500, 1700), ylim = c(-1700, 2200), expand = F) +
+#   guides(fill = "none") +
+#   # Acoustics
+#   geom_point(data = MVBS_laea, aes(x = xc, y = yc), 
+#              shape = 20, col = "#009E73", alpha = 0.5) +
+#   # Trawls
+#   geom_point(data = trawl_laea, aes(x = xc, y = yc),
+#              shape = 18, col = "#E69F00", size = 2) +
+#   # Plot North Pole
+#   geom_point(aes(x = 0, y = 0), shape = 4, stroke = 0.5) +
+# 
+#   theme(legend.position = "right", 
+#         panel.border = element_rect(fill = NA),
+#         axis.text = element_blank(),
+#         axis.ticks = element_blank(), 
+#         axis.title = element_blank())
+# ggsave("plots/base_map_laea_stations_lon.png",
+#        map_laea_lon, height = 4, width = 6, dpi = 600, units = "in")
+```
 
 
 
