Maps current velocity and direction at 318 m depth

--- a/PanArctic_DSL_download_CMEMS.ipynb
+++ b/PanArctic_DSL_download_CMEMS.ipynb
@@ -151,10 +151,10 @@
    "outputs": [],
    "source": [
     "# Area definition\n",
-    "lon_min = -155\n",
-    "lon_max = 40\n",
-    "lat_min = 60\n",
-    "lat_max = 85\n",
+    "lon_min = -180\n",
+    "lon_max = 180\n",
+    "lat_min = 50\n",
+    "lat_max = 90\n",
     "\n",
     "# Date definitions\n",
     "date_start = dt.datetime(2014, 12, 15)\n",
@@ -171,21 +171,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "OUTPUT_DIRECTORY = 'data/remote_sensing/physics/phy_266_318m'"
+    "OUTPUT_DIRECTORY = 'data/ocean_currents'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Depths of interest\n",
-    "depth = [266, 318]"
+    "depth = [318]"
    ]
   },
   {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -206,43 +206,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading 2015-01-15 266 m\n",
-      "Downloading 2015-02-15 266 m\n",
-      "Downloading 2015-03-15 266 m\n",
-      "Downloading 2015-04-15 266 m\n",
-      "Downloading 2015-05-15 266 m\n",
-      "Downloading 2015-06-15 266 m\n",
-      "Downloading 2015-07-15 266 m\n",
-      "Downloading 2015-08-15 266 m\n",
-      "Downloading 2015-09-15 266 m\n",
-      "Downloading 2015-10-15 266 m\n",
-      "Downloading 2015-11-15 266 m\n",
-      "Downloading 2015-12-15 266 m\n",
-      "Downloading 2016-01-15 266 m\n",
-      "Downloading 2016-02-15 266 m\n",
-      "Downloading 2016-03-15 266 m\n",
-      "Downloading 2016-04-15 266 m\n",
-      "Downloading 2016-05-15 266 m\n",
-      "Downloading 2016-06-15 266 m\n",
-      "Downloading 2016-07-15 266 m\n",
-      "Downloading 2016-08-15 266 m\n",
-      "Downloading 2016-09-15 266 m\n",
-      "Downloading 2016-10-15 266 m\n",
-      "Downloading 2016-11-15 266 m\n",
-      "Downloading 2016-12-15 266 m\n",
-      "Downloading 2017-01-15 266 m\n",
-      "Downloading 2017-02-15 266 m\n",
-      "Downloading 2017-03-15 266 m\n",
-      "Downloading 2017-04-15 266 m\n",
-      "Downloading 2017-05-15 266 m\n",
-      "Downloading 2017-06-15 266 m\n",
-      "Downloading 2017-07-15 266 m\n",
-      "Downloading 2017-08-15 266 m\n",
-      "Downloading 2017-09-15 266 m\n",
-      "Downloading 2017-10-15 266 m\n",
-      "Downloading 2017-11-15 266 m\n",
-      "Downloading 2017-12-15 266 m\n",
-      "Download 266m finished.\n",
       "Downloading 2015-01-15 318 m\n",
       "Downloading 2015-02-15 318 m\n",
       "Downloading 2015-03-15 318 m\n",
